--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "manifest_version": 1,
+  "version": "3.0",
+  "manifest_version": 2,
   "name": "bluegray",
-  "version": "1",
   "description": "bluegray Theme",
   "theme": {
     "images": {
@@ -9,19 +9,25 @@
       "theme_frame_overlay": "images/theme_frame_overlay.png",
       "theme_toolbar": "images/theme_toolbar.png",
       "theme_ntp_background": "images/theme_ntp_background.jpg",
-      "theme_tab_background": "images/theme_tab_background.png"
+      "theme_tab_background": "images/theme_tab_background.png",
+      "theme_tab_background_incognito": "images/theme_tab_background_incognito.png",
+      "theme_tab_background_incognito_inactive": "images/theme_tab_background_incognito_inactive.png"
     },
     "colors": {
       "frame": [63, 83, 110],
       "toolbar": [0, 0, 0],
       "tab_text": [255, 255, 255],
       "tab_background_text": [0, 0, 0],
+      "tab_background_text_incognito": [0, 0, 0],
+      "tab_background_text_incognito_inactive": [0, 0, 0],
       "bookmark_text": [255, 255, 255],
       "ntp_background": [255, 255, 255],
       "ntp_section": [207, 221, 192],
       "ntp_link": [36, 70, 255],
       "ntp_text": [0, 0, 0],
-      "button_background": [255, 62, 62, 0.7]
+      "button_background": [255, 62, 62, 0.7],
+      "background_tab_incognito": [255, 255, 255],
+      "background_tab_incognito_inactive": [255, 0, 0]
     },
     "tints": {
       "buttons": [0.59, 1, 0.85]
