--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,10 @@
   "manifest_version": 2,
   "name": "bluegray",
   "description": "bluegray Theme",
+  "author": "bluegray",
+  "icons": {
+    "128": "images/icons/icon128.png"
+  },
   "theme": {
     "images": {
       "theme_frame": "images/theme_frame.png",
